<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Optimal Battery Saver</string>
    <string name="ps_mode">Optimal Battery Saver</string>
    <string name="wid_upgr">Please upgrade to enable the widget</string>
    <string name="wid_upgr_txt">Upgrade now only for 99 cents!</string>
    <string name="data">DATA</string>
    <string name="auto">Automatic</string>
    <string name="more_apps">More cool apps!</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="refund_pol">*You are covered under Google Play\'s refund policy. \n\nFor ANY reason, if you do not like the app, you are free to refund it as per the Google Play Store refund policy.</string>
    <string name="timeselected">Set the Time Interval</string>
    <string name="power_saver">Power Saver Mode</string>
    <string name="phn_set">Phone Settings</string>
    <string name="power_saver_txt">Power Saver Mode</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pw_set">When in power saver mode, WIFI/Mobile Internet is turned on and off at intervals in order to save battery and bandwidth. You could leave the default values or choose to customize it below.</string>
    <string name="pw_set2">Change Interval Settings:</string>
    <string name="pw_set3">At intervals of:</string>
    <string name="net_on">Remember to add our desktop widget so you can control WIFI, DATA and setting right from your desktop! \n\nTurn Internet ON every time phone is unlocked?</string>
    <string name="min">minutes</string>
    <string name="slp_on">Power Saver mode is ON during sleep mode. \nWIFI/Data network will remain OFF when the phone is in sleep mode. \n\nWifi/Data will be enabled with the phone is in use, based on settings above.</string>
    <string name="slp_off">Power Saver mode is OFF during sleep mode. \nWIFI/Data network will occasionally turn ON when the phone is in sleep mode. \n\nWifi/Data will be enabled with the phone is in use.</string>
    <string name="cur_state">Current State:</string>
    <string name="change_set">Change Settings</string>
    <string name="change_set2">Tap here to confirm changes</string>
    <string name="app_spec">Application Specific Settings</string>
    <string name="net">Network</string>
    <string name="upd_free">** And get lifetime updates for free **</string>
    <string name="upsell_btn">Download now for only 99 cents!</string>
    <string name="upsell_copy">A lot of time and effort goes into building apps. To avail of all features, please consider upgrading to the PRO version (no ads) for only 99 cents! \n\nAlso get a super cool desktop widget to turn on/off Wifi and Data networks. \nAll future upgrades are free. </string>
    <string name="upsell_copy2">The advanced version gives you the easy access desktop widget along with all the advanced settings to make your battery last even longer.</string>
    <string name="feat_pro">Features in full version:</string>
    <string name="confirm">Confirm Settings</string>
    <string name="notif">Notifications</string>
    <string name="cust_apps">Customize Application Settings</string>
    <string name="adv_set">Advanced Settings</string>
    <string name="adv_set_txt">If you would like to change the default power saving settings, tap the button below.</string>
    <string name="sleep">Sleep Mode Settings</string>
    <string name="sleep_txt">Choosing YES (that\'s power saver ON) below will keep Internet/WIFI turned OFF while your phone is in sleep mode.</string>
    <string name="wifi">WIFI</string>
    <string name="simple_mode">Back to Simple Mode</string>
    <string name="welcome">This app is designed to save battery resources by regulating your WIFI and Mobile Data network usage. \n\n You can make your battery last MUCH longer and also save money on any mobile network that you connect to. \n\nAll you need to do is turn ON the power saver by clicking on the button above. \n</string>
    <string name="mob_net">Mobile Internet</string>
    <string name="app_set">Tap on the button below to customize application related settings. \nSelecting an application from the list will keep Internet ON while that application is in active use. \n \nEg. If you have selected Facebook from the list, WIFI will continue to run when Facebook is the active (visible) application.</string>
    <string name="app_set_btn">Click here to change app settings</string>
    <string name="cst">Advanced Settings</string>
    <string name="net_txt">Choose which network you want to use Power Saver Mode in. Especially useful when you are not within WIFI range and want to cut mobile data costs.\n\nNote: Automatic mode will first connect to the available WIFI network.\n\nIf WIFI is unavailable, then connect to mobile data.\n\nIf you do not use mobile data, please select WIFI only.</string>
    <string name="wifion">Wifi ON</string>
    <string name="wifioff">Wifi Off</string>
    <string name="poweroff">Power Saver OFF</string>
    <string name="poweron">Power Saver ON</string>
    <string name="dataoff">Data Off</string>
    <string name="dataon">Data On</string>
    <string name="appnotfound">Application Not Found</string>
    <string name="wait">Please wait.. setting up the battery saver</string>
    <string name="psslpon">Power Saver mode ON during sleep mode</string>
    <string name="psslpoff">Power Saver mode OFF during sleep mode</string>
    <string name="nonet">Network Unreachable</string>
    <string name="nonotif">No notifications found</string>
    <string name="unerr">Unknown Error</string>
    <string name="setsave">Settings Saved</string>
    <string name="welc">Welcome</string>
     <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string  name="setchg">Settings Changed Successfully </string>

</resources>