<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
     android:layout_height="wrap_content">

<ScrollView 
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

        <RelativeLayout
           
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:background="@color/grey"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/power_saver"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ToggleButton
                android:id="@+id/powersaver"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                 />
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/powersaver"
                android:layout_marginTop="136dp"
                android:background="@color/grey"
                android:text="@string/menu_settings"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="19dp"
                android:text="@string/pw_set"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="10dp"
                android:text="@string/pw_set2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.rainmaker.android.batterysaver.ap.MySpinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/textView4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/spinner1"
                android:layout_marginTop="32dp"
                android:background="@color/grey"
                android:text="@string/net"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView8"
                android:layout_marginTop="14dp"
                android:text="@string/net_txt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/wifi_or_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView4"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="16dp" >

                <RadioButton
                    android:id="@+id/wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/wifi" />

                <RadioButton
                    android:id="@+id/mob_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mob_net" />

               
            </RadioGroup>

            
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/wifi_or_data"
                android:layout_marginTop="36dp"
                android:background="@color/grey"
                android:text="@string/sleep"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="10dp"
                android:text="@string/sleep_txt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/sleep_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wifi_or_data"
                android:layout_below="@+id/textView11"
                android:layout_marginTop="20dp"
                />
            <TextView
                  android:id="@+id/sleep_mode_txt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentRight="true"
                  android:layout_below="@+id/sleep_mode"
                  android:layout_marginTop="20dp"
                  android:text="@string/cur_state" />
            
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/sleep_mode_txt"
                android:layout_marginTop="56dp"
                android:background="@color/grey"
                android:text="@string/app_spec"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView12"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="10dp"
                android:text="@string/app_set"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
              <Button
                android:id="@+id/app_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView13"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="40dp"
                android:text="@string/app_set_btn" />

              <TextView
                  android:id="@+id/textView5"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentRight="true"
                  android:layout_below="@+id/powersaver"
                  android:layout_marginTop="18dp"
                  android:text="@string/net_on"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

              <ToggleButton
                  android:id="@+id/netonwakeup"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignLeft="@+id/powersaver"
                  android:layout_below="@+id/textView5"
                  android:layout_marginTop="16dp"
                  android:textOn="Yes"
                  android:textOff="No"
                  android:text="ToggleButton" />

              <Button
                  android:id="@+id/simple_mode"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignTop="@+id/powersaver"
                  android:layout_marginLeft="34dp"
                  android:layout_toRightOf="@+id/powersaver"
                  android:text="@string/simple_mode" />

        </RelativeLayout>
        

</ScrollView>

               </RelativeLayout>